mdapioutput/objects/Position__c.object
<CustomObject>
    <label>Position</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Position</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Position</relationshipLabel>
        <relationshipName>Position</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Position</relationshipLabel>
        <relationshipName>PositionDepartment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>